--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <footer>
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a> 
-        Coded by <a href="#">Ilham Bouktir</a>.
+        Coded by <a href="https://github.com/ilham-bouk">Ilham Bouktir</a>.
       </footer>
     </main>
 
